# ogu_api

./: .env  config.py  main.py  pyproject.toml
app/api/: __init__.py  schedule.py
app/models/: db.py
app/services/: auth.py
app/services/schedule/: __init__.py  api.py  models.py
app/utils/: ratelimiter.py  time.py
